Created link to PostGre

--- a/05 LuxDev BootCamp/01 Python_SQL_Intro/.vscode/settings.json
+++ b/05 LuxDev BootCamp/01 Python_SQL_Intro/.vscode/settings.json
@@ -9,5 +9,6 @@
             "database": "luxdev",
             "username": "postgres"
         }
-    ]
+    ],
+    "python.analysis.typeCheckingMode": "basic"
 }
